Change status about job

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of Joris Buchou, Full Stack Developer and Web Application Developer">
     <meta name="author" content="Joris Buchou">
-    <meta name="keywords" content="joris,buchou,developer,ruby,rails,jquery,html,javacript" />
+    <meta name="keywords" content="joris,buchou,developer,ruby,rails,jquery,html,javacript,backbone" />
     <link rel="shortcut icon" href="assets/img/favicon.ico">
 
     <meta property="og:title" content="Joris Buchou | Full Stack Developer" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="http://jorisbuchou.herokuapp.com" />
-	<meta property="og:image" content="http://jorisbuchou.herokuapp.com/assets/img/user.png" />
+	<meta property="og:url" content="http://joris974.github.io/aboutme" />
+	<meta property="og:image" content="http://joris974.github.io/aboutme/assets/img/user.png" />
 
     <title>Joris Buchou | Full Stack Developer</title>
 
@@ -66,7 +66,10 @@
 					<h1>Full Stack Developer</h1>
 					<p>
 						My name is Joris Buchou. I am a Full Stack Developer who loves to make web applications.<br/>
-						I am really interested in new technologies and new frameworks. I am currently <strong>looking for a job in San Francisco</strong>. Take a moment to discover <a href="#projects">my projects</a>, I am sure you will like them.
+						I am really interested in new technologies and new frameworks. I am currently working for <a href="http://frontrowed.com/" target="_blank">FrontRow</a> in San Francisco.
+					</p>
+					<p>
+						Take a moment to discover <a href="#projects">my projects</a>, I am sure you will like them.
 					</p>
 				</div><!-- /col-lg-8 -->
 			</div><!-- /row -->
